# zeroclaw-x

./: .editorconfig  README.md  components.json  index.html  mcp-dom.txt  package.json  skills-dom.txt  tsconfig.json  vite.config.ts
scripts/: mock_mcp_stdio.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  channel.rs  chat.rs  cron.rs  knowledge.rs  mcp.rs  mod.rs  project.rs  settings.rs  skill.rs  update.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: auth.rs  channel.rs  chat.rs  cron.rs  knowledge.rs  mcp.rs  project.rs  settings.rs  skill.rs  update.rs
src-tauri/src/services/: auth.rs  channel.rs  chat.rs  cron.rs  mcp.rs  mod.rs  runtime.rs  skill.rs  update.rs
src/api/: tauri.ts
src/assets/css/: app.css
src/components/agent/: AgentSettingsPanel.vue
src/components/chat/: ChatComposer.vue  ChatMessageList.vue  MarkdownMessage.vue
src/components/common/: EmptyState.vue
src/components/layout/: AppShell.vue  AppSidebar.vue  AppTopbar.vue
src/components/skills/: SkillDetailPanel.vue  (+2 more)
src/composables/: useChatStream.ts
src/i18n/: index.ts
src/lib/: datetime.ts  utils.ts
src/router/: index.ts
src/stores/: app.ts  channel.ts  chat.ts  cron.ts  mcp.ts  projects.ts  settings.ts  skill.ts  update.ts
src/views/: ChannelCreateView.vue  ChannelsView.vue  ChatView.vue  CronView.vue  McpCreateView.vue  McpView.vue  ProjectsView.vue  SettingsView.vue  SkillCreateView.vue  SkillEditView.vue  SkillsView.vue
(+4 files in other folders)
